ControllerTest and model fixed